--- a/dj-loop-pipeline_structure.ini
+++ b/dj-loop-pipeline_structure.ini
@@ -1,18 +1,44 @@
 dj-loop-pipeline/
-├── data/
-│   ├── raw_audio/            # Place WAV files here
-│   └── exported_loops/       # Output WAV + MP3 + metadata
-├── pipelines/
-│   ├── sample_pack_pipeline_ml.py
-│   ├── export_top_loops_pro.py
-│   └── batch_export_loops.py
-├── training/
-│   ├── dataset_builder.py
-│   ├── feature_extraction.py
-│   ├── train_loop_ranker.py
-│   └── models/               # Trained model + features
-│       ├── loop_ranker.json
-│       └── features.json
+├── .env                               # Local secrets (e.g., DROPBOX_ACCESS_TOKEN=...)
 ├── README.md
-└── requirements.txt
-└── Dockerfile
+├── dj-loop-pipeline_structure.ini
+├── dj-loop-pipeline-dockerfile.dockerfile
+├── requirements_dj_loop_pipeline.txt  # Main dependencies
+├── requirements_optional_dropbox.txt  # Optional: Dropbox SDK
+├── requirements_optional_mlflow.txt   # Optional: MLflow experiment tracking
+├── timestamps_example.json            # Example labels file for dataset building
+├── loop_training_dataset.csv          # Example/generated dataset (CSV)
+├── mlflow.db                          # Local MLflow tracking DB (created when using MLflow locally)
+├── mlruns/                            # Local MLflow runs/artifacts (created when using MLflow locally)
+├── data/
+│   ├── raw_audio/                     # Input WAVs
+│   ├── exported_loops/                # (Typical) loop exports (WAV/MP3/CSV)
+│   ├── exported_quiet_loops/          # (Typical) quiet/drumless loop exports + slices
+│   ├── exported_breaks/               # (Typical) drum break exports + one-shots
+│   ├── exported_breaks_test/          # Dev/test output (workspace-specific)
+│   └── exported_breaks_test2/         # Dev/test output (workspace-specific)
+├── pipelines/
+│   ├── sample_pack_pipeline_ml.py              # Main scoring/ranking pipeline (XGBoost or Torch)
+│   ├── export_top_loops_pro.py                 # Loop exporter (WAV + optional MP3)
+│   ├── batch_export_loops.py                   # Batch loop exporter
+│   ├── drum_breaks.py                          # Drum break isolation + one-shot slicing/labels
+│   ├── batch_export_drum_breaks.py             # Batch drum break exporter
+│   ├── loop_note_slices.py                     # Slice a loop on harmonic/note onsets
+│   └── batch_export_quiet_loops_and_slices.py  # Quiet loop selection + 8/16/32 slicing
+├── tools/
+│   ├── dropbox_download_audio.py      # Optional: download audio from Dropbox
+│   └── dropbox_audio_stream.py        # Optional: stream audio bytes + in-memory decode
+└── training/
+	├── build_training_dataset_cli.py            # Build loop_training_dataset.csv from WAVs + timestamps
+	├── dataset_builder.py                       # Candidate generation + label weighting + dataset build
+	├── feature_extraction.py                    # Audio features + caching (log-mel, HPSS, boundaries)
+	├── torch_ranker.py                          # MLP + scaler + checkpoint save/load
+	├── train_loop_ranker.py                     # Legacy XGBoost trainer
+	├── train_loop_ranker_torch.py               # Torch regression trainer (predict weight)
+	├── train_loop_ranker_torch_rank.py          # Torch listwise ranking trainer (best loop per track)
+	├── train_loop_ranker_torch_dropbox_stream.py# Optional: stream from Dropbox, train, upload model
+	└── models/                                  # Trained models + feature lists
+		├── loop_ranker.json                      # Legacy XGBoost model
+		├── loop_ranker.pt                        # Torch regressor model
+		├── loop_ranker_rank.pt                   # Torch ranking model
+		└── features.json                         # Feature list (compatibility)
